--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!------------------------ Header ------------------------>
     
     <section class="header">
-        <h1>DECOUVREZ LES OFFRES DU MOMENT</h1>
+        <h1>DÉCOUVREZ LES OFFRES DU MOMENT</h1>
         <h2>VOL + HOTEL JUSQU'A -70%</h2><div class="lign1"><img src="./assets/lign1.png" alt="lign1"></div>
     
       <div class="buttons">
