--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="ob2t7JpeqgrG8ornzaMIdYaht2ACgUn51HRFdv6KS1c" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!------------------------ Fonts ------------------------>
     <link href="https://fonts.googleapis.com/css2?family=Paprika&display=swap" rel="stylesheet">
